using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Constants
{
    // Input
    public static string Input_Horizontal = "Horizontal";
    public static string Input_Vertical = "Vertical";
    public static string Input_Interact = "Interact";

    // Animation
    public static string Anim_Speed = "MovementBlend";
    public static string Anim_Grounded = "Grounded";
    public static string Anim_Switch = "Switch";
    public static string Anim_JailCellDoorMoveDown = "MoveDown";
    public static string Anim_PlayerDead = "Dead";
    public static string Anim_VignetteFadeIn = "VignetteFadeIn";

    // Layers
    public static string Layer_Interactable = "Interactable";

    // Tags
    public static string Tag_Player = "Player";
}
